commit n°21 22/07/2020 SECURITY:  - Formulaire Inscription   * Ajouter un nouveau compte Utilisateur   * Modifier le compte d'un utilisateur
 - Formulaire de connexion
 - Ajouter l'option Déconnexion

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,9 @@ security:
                 login_path: connexion_utilisateur
                 check_path: connexion_utilisateur
 
+            logout:
+                path: security_logout
+                target: home
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
